# airo-tilt

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
src/: __init__.py  main.py  sam2_coordinate_runner.py  test.py
src/core/: __init__.py  sam2_predictor.py
src/ui/: __init__.py  aruco_marker_test.py  coordinate_collector.py  visualizer.py
src/utils/: __init__.py  aruco_marker.py  device_manager.py  geometry.py  image_loader.py
